Update checkstyle, fix errors for java